Command Triggers: Added Required Parameters setting.
The trigger will only activate if the specified parameter values are given (case-insensitive).
It acts as a filter but isn't set to an actual filter since it's only valid for Command Triggers.

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -83,6 +83,8 @@ Module ideas:
 	* Fluxistence: "@Fluxistant Shut up."
 	* Fluxistant: "@Fluxistence You shut up." / "@Fluxistence Make me." (chosen randomly)
 - Regex-based auto-bans
+- Guest Star system that shows an image for them (well, fills in images and texts in general)
+	- Default with Polly
 
 GUI Library: Buefy
 Twitch library: https://www.npmjs.com/package/twitch
